--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,9 @@
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0"
     },
+    "require-dev": {
+        "symfony/maker-bundle": "^1.43"
+    },
     "config": {
         "allow-plugins": {
             "composer/package-versions-deprecated": true,
