--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
         "@symfony/webpack-encore": "^2.0.0",
         "core-js": "^3.0.0",
         "regenerator-runtime": "^0.13.2",
+        "sass": "^1.52.3",
+        "sass-loader": "^12.6.0",
         "webpack-notifier": "^1.6.0"
     },
     "license": "UNLICENSED",
