--- a/config/services.yaml
+++ b/config/services.yaml
@@ -22,3 +22,7 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    App\EventListener\User\ChangePasswordListener:
+        tags:
+            - { name: doctrine.orm.entity_listener }
