feat(app): déclaration de la configuration trusted_proxies

--- a/.env
+++ b/.env
@@ -16,6 +16,7 @@
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=9450a6013f02c25824b02a75de065592
+TRUSTED_PROXIES=127.0.0.1,REMOTE_ADDR
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
