--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "symfony/proxy-manager-bridge": "6.1.*",
         "symfony/runtime": "6.1.*",
         "symfony/twig-bundle": "6.1.*",
+        "symfony/ux-twig-component": "^2.2",
         "symfony/webpack-encore-bundle": "^1.14",
         "symfony/yaml": "6.1.*",
         "twig/extra-bundle": "^2.12|^3.0",
