chore(docker): création d'une variable environnement DOCKER_SOCK pour le path vers le fichier docker.sock

--- a/.docker/.env.dist
+++ b/.docker/.env.dist
@@ -11,6 +11,12 @@ USER_ID=1000
 GROUP_ID=1000
 
 # ----------------------------
+# Docker
+# ----------------------------
+
+DOCKER_SOCK=/var/run/docker.sock
+
+# ----------------------------
 # Ports
 # ----------------------------
 
