--- a/.docker/environments/dev/docker-compose.traefik.yaml
+++ b/.docker/environments/dev/docker-compose.traefik.yaml
@@ -36,7 +36,7 @@ services:
       - ${PORT_HTTPS}:443
       - ${PORT_TRAEFIK}:8080
     volumes:
-      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - ${DOCKER_SOCK}:/var/run/docker.sock:ro
       - ./services/traefik/traefik.yaml:/etc/traefik/traefik.yaml:ro
       - ./services/traefik/certs:/etc/certs/:ro
       - ./services/traefik/confs:/etc/traefik/confs/:ro
