feat(media): gestion de l'upload d'un fichier

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,10 @@
 !/.docker/services/database/import/.gitkeep
 ###< Docker ###
 
+###> assets ###
+/public/uploads/
+###< assets ###
+
 ###> symfony/framework-bundle ###
 /.env.local
 /.env.local.php
