--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -2,6 +2,14 @@ twig:
     default_path: '%kernel.project_dir%/templates'
     form_themes:
         - 'bootstrap_5_layout.html.twig'
+        - '.forms/media.form.html.twig'
+
+    paths:
+        'templates/.components': 'component'
+        'templates/.forms': 'form'
+
+    globals:
+        media: '%media%'
 
 when@test:
     twig:
