feat(carousel): affichage du carousel en page d'accueil

--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -9,7 +9,7 @@ twig:
         'templates/.forms': 'form'
 
     globals:
-        media: '%media%'
+        media_manager: '%media%'
 
 when@test:
     twig:
