--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "build": "encore production --progress"
     },
     "dependencies": {
-        "@fortawesome/fontawesome-free": "^6.1.1"
+        "@fortawesome/fontawesome-free": "^6.1.1",
+        "jquery": "^3.6.0"
     }
 }
