feat(contact): installation et configuration de symfony/mailer

--- a/.docker/docker-compose.yaml
+++ b/.docker/docker-compose.yaml
@@ -37,4 +37,4 @@ services:
             - ${SOURCE_ROOT_FOLDER}:/app
 
     smtp:
-        image: djfarrelly/maildev
+        image: schickling/mailcatcher
