--- a/.env
+++ b/.env
@@ -27,3 +27,7 @@ TRUSTED_PROXIES=127.0.0.1,REMOTE_ADDR
 #DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 DATABASE_URL="mysql://maxrenov:mysql@database:3306/maxrenov?serverVersion=5.7&charset=utf8mb4"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/mailer ###
+ MAILER_DSN=smtp://smtp:1025
+###< symfony/mailer ###
