--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "symfony/flex": "^2",
         "symfony/framework-bundle": "6.1.*",
         "symfony/http-client": "6.1.*",
+        "symfony/mailer": "6.1.*",
         "symfony/mime": "6.1.*",
         "symfony/proxy-manager-bridge": "6.1.*",
         "symfony/runtime": "6.1.*",
@@ -85,7 +86,8 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "6.1.*"
+            "require": "6.1.*",
+            "docker": true
         }
     }
 }
