--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -7,6 +7,7 @@ twig:
     paths:
         'templates/.components': 'component'
         'templates/.forms': 'form'
+        'templates/.emails': 'email'
 
     globals:
         media_manager: '%media%'
